# rust-binary-crate-template

./: Cargo.toml  Cargo.toml.boiler  README.md
src/: lib.rs
